Fix alignment of TOC on smaller screens.

--- a/css/theme.css
+++ b/css/theme.css
@@ -40,6 +40,8 @@ code[class*="language-"] {
 }
 
 pre {
+  margin-left: -0.8em;
+  margin-right: -0.8em;
   padding: 0.6em 0.8em;
   position: relative;
 }
@@ -114,9 +116,18 @@ pre::after {
   display: block;
 }
 
+.tutorial-nav {
+
+}
+
 .tutorial-nav ol {
   margin: 0;
   padding: 0;
+}
+
+.tutorial-nav > ol {
+  margin-left: -0.3em;
+  margin-right: -0.3em;
 }
 
 .tutorial-nav ol ol {
